infra/k8s/monitor/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
spec:
  ingressClassName: nginx
  rules:
    - host: gangwon-inspire12.duckdns.org
      http:
        paths:
          - path: /monitor
            pathType: Prefix
            backend:
              service:
                name: monitoring-grafana
                port:
                  number: 3000
